--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>K.98 실험체</title>
+    <title>K.98 test</title>
     <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
