--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>K.98 test</title>
-    <script type="module" src="./main.ts"></script>
+    <script type="module" src="./main.jsx"></script>
   </head>
   <body>
     <div id="app"></div>
